# shipyard

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile.toml  README.md  justfile  project.yamis.toml  release-check-list.md
.cargo/: config.toml
.github/workflows/: book.yml  build.yml  bunny_demo.yml  check-deploy.yml  check.yml  demo.yml  deploy.yml  guide.yml
benches/: bench.rs  hot_iteration.rs
book/src/: SUMMARY.md  contributors.md  examples.md  fundamentals.md  getting-started.md  going-further.md  how-to.md  pilgrimage.md  under-the-hood.md  using-this-guide.md  welcome.md
bunny_demo/: Cargo.toml  README.md  index.html  package-lock.json  package.json  rollup.prod.js  styles.css
bunny_demo/public/: index.html
bunny_demo/src/: bunny_state.rs  components.rs  config.rs  fps.rs  graphics.rs  hud.rs  init.rs  input.rs  lib.rs  main.rs  renderer.rs  shader.wgsl  systems.rs  world.rs
bunny_demo/wasm/: bunny_demo_lib.d.ts  bunny_demo_lib.js  bunny_demo_lib_bg.wasm  bunny_demo_lib_bg.wasm.d.ts  index.js  index.js.map  package.json  shipyard_bunny_demo.wasm
demo/: Cargo.toml  Makefile.toml  package-lock.json  package.json  rollup.dev.js  rollup.prod.js
demo/_static/: index.html  styles.css
demo/_static/wasm/shipyard_demo/pkg/: shipyard_demo.d.ts  shipyard_demo.js  shipyard_demo_bg.d.ts
demo/public/wasm/: index.js  index.js.map  shipyard_demo.wasm
demo/src/: components.rs  config.rs  fps.rs  geometry.rs  hud.rs  init.rs  input.rs  lib.rs  renderer.rs  systems.rs  world.rs
examples/: custom_component.rs  hello_world.rs
guide/: book.toml
guide/0.10/: 404.html  contributors.html  fundamentals.html  going-deeper.html  going-further.html  index.html  learn-by-example.html  print.html  recipes.html  searchindex.js  searchindex.json
guide/0.11/: 404.html  fundamentals.html  learn-by-example.html  print.html  searchindex.js  searchindex.json
guide/0.5.0/: 404.html  contributors.html  fundamentals.html  going-further.html  index.html  pilgrimage.html  print.html  recipes.html  searchindex.js  searchindex.json  welcome.html
guide/0.6/: 404.html  contributors.html  fundamentals.html  going-deeper.html  going-further.html  index.html  pilgrimage.html  print.html  recipes.html  searchindex.js  searchindex.json  welcome.html
guide/0.7/: going-deeper.html  index.html  learn-by-example.html  print.html  recipes.html  searchindex.js  searchindex.json
guide/0.8/: 404.html  contributors.html  fundamentals.html  going-further.html  print.html  searchindex.js  searchindex.json
guide/0.9/: 404.html  book.toml  contributors.html  fundamentals.html  going-deeper.html  going-further.html  learn-by-example.html  print.html  recipes.html  searchindex.js  searchindex.json  welcome.html
guide/master/: 404.html  book.toml  contributors.html  fundamentals.html  going-deeper.html  going-further.html  index.html  learn-by-example.html  print.html  recipes.html  searchindex.js  searchindex.json  welcome.html
guide/src/: SUMMARY.md  fundamentals.md  welcome.md
shipyard_proc/: CRATES.md  Cargo.toml
shipyard_proc/src/: all_storages_borrow_expand.rs  borrow_expand.rs  borrow_info_expand.rs  component_expand.rs  into_iter_expand.rs  label_expand.rs  lib.rs  world_borrow_expand.rs
square_eater/: Cargo.toml  README.md  index.html  square_eater.wasm
square_eater/public/: index.html
square_eater/src/: main.rs
src/: add_component.rs  add_distinct_component.rs  add_entity.rs  add_unique_macro.rs  advanced.rs  atomic_refcell.rs  component.rs  component_storage.rs  contains.rs  delete.rs  entity.rs  entity_builder.rs  error.rs  get.rs  get_component.rs  get_storage.rs  get_unique.rs  internal.rs  iter_component.rs  lib.rs  memory_usage.rs  mut.rs  not.rs  optional.rs  or.rs  prelude.rs  public_transport.rs  remove.rs  reserve.rs  run.rs  serde_setup.rs  sparse_array.rs  system.rs  system_macro.rs  timestamp.rs  track.rs  tracking.rs  unique.rs  unknown_storage.rs  view.rs  (+2 more)
src/advanced/: get_unique.rs  tracking.rs
src/all_storages/: builder.rs  clone.rs  custom_storage.rs  mod.rs  retain.rs
src/atomic_refcell/: borrow_state.rs
src/borrow/: all_storages.rs  borrow_info.rs  fake_borrow.rs  mod.rs  non_send.rs  non_send_sync.rs  non_sync.rs  view.rs  world.rs  world_borrow.rs
src/component_storage/: delete.rs  hasher.rs  mod.rs  view.rs
src/entities/: iterator.rs  mod.rs
src/entity/: add_component.rs  mod.rs  view.rs
src/entity_id/: mod.rs  serde.rs
src/erased_serde/: any.rs  de.rs  error.rs  (+3 more)
tests/: add_component.rs  add_entity.rs  clear.rs  clone.rs  delete.rs  delete_any.rs  delete_component.rs  delete_entity.rs  derive.rs  get.rs  key.rs  lib.rs  pack.rs  readme.rs  remove.rs  retain.rs  shared.rs  sort.rs  spawn.rs  static_view.rs  swap.rs  system.rs  tracking.rs  unique.rs  update_pack.rs  window.rs  world_add_component.rs  world_add_entity.rs  world_delete_component.rs  world_delete_entity.rs  world_remove.rs
tutorial/: Cargo.toml  LICENCE  book.toml
visualizer/: Cargo.toml  index.html  visualizer-32d30ec602c9e0f5.js  visualizer-32d30ec602c9e0f5_bg.wasm  visualizer-393ca7b5aa4b7099.js  visualizer-393ca7b5aa4b7099_bg.wasm  visualizer-450aa0a58c554665.js  visualizer-450aa0a58c554665_bg.wasm  visualizer-65cf3cab7153c6b0.js  visualizer-65cf3cab7153c6b0_bg.wasm  visualizer-916e9440c322d9d8.js  visualizer-916e9440c322d9d8_bg.wasm  visualizer-a43c345268127b51.js  visualizer-a43c345268127b51_bg.wasm  visualizer-abfcde2610c99bba.js  visualizer-abfcde2610c99bba_bg.wasm  visualizer-aef0c39358617c48.js  visualizer-aef0c39358617c48_bg.wasm  visualizer-b383ca58e1dd8cc8.js  visualizer-b383ca58e1dd8cc8_bg.wasm  visualizer-d54667adc24cdef.js  visualizer-d54667adc24cdef_bg.wasm  visualizer-fe6f76dd228d2856.js  visualizer-fe6f76dd228d2856_bg.wasm  visualizer-ffb4fb159e48d5d6.js  visualizer-ffb4fb159e48d5d6_bg.wasm
visualizer/assets/: sw.js
visualizer/src/: access_info.rs  app.rs  home.rs  lib.rs  main.rs  square_eater_workloads.json  syntax_highlight.rs  workload_editor.rs  workload_selector.rs
visualizer_yew/: Cargo.toml  index.html
(+911 files in other folders)
