[package]
authors = ["leudz <dylan.ancel@gmail.com>"]
categories = ["data-structures", "game-development", "concurrency", "no-std"]
description = "Entity Component System"
edition = "2021"
keywords = ["ecs", "entity", "component"]
license = "MIT OR Apache-2.0"
name = "shipyard"
readme = "README.md"
repository = "https://github.com/leudz/shipyard"
version = "0.6.5"

[workspace]
members = ["bunny_demo", "shipyard_proc", "square_eater", "visualizer"]

[dependencies]
hashbrown = "0.12.0"
lock_api = "0.4.0"
rayon = { version = "1.5.1", optional = true }
serde = { version = "1.0.0", optional = true, default-features = false, features = [
    "derive",
] }
shipyard_proc = { version = "0.3.0", path = "./shipyard_proc", optional = true }
tracing = { version = "0.1.0", default-features = false, optional = true }

[features]
default = ["parallel", "proc", "std"]
parallel = ["rayon"]
proc = ["shipyard_proc"]
serde1 = ["serde", "hashbrown/serde"]
std = []
thread_local = ["std"]

[dev-dependencies]
bincode = "1.3.3"
parking_lot = "0.12.0"
serde_json = "1.0.78"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
