[package]
authors = ["leudz <dylan.ancel@gmail.com>"]
categories = ["data-structures", "game-development", "concurrency", "no-std"]
description = "Entity Component System"
edition = "2021"
keywords = ["ecs", "entity", "component"]
license = "MIT OR Apache-2.0"
name = "shipyard"
readme = "README.md"
repository = "https://github.com/leudz/shipyard"
version = "0.11.0"

[workspace]
members = ["bunny_demo", "shipyard_proc", "square_eater", "visualizer"]

[dependencies]
hashbrown = { version = "0.16.1", default-features = false, features = [
    "inline-more",
    "allocator-api2",
    "default-hasher",
] }
lock_api = "0.4.14"
rayon = { version = "1.11.0", optional = true }
serde = { version = "1", optional = true, default-features = false, features = [
    "derive",
] }
shipyard_proc = { git = "https://github.com/leudz/shipyard", optional = true }
tracing = { version = "0.1.44", default-features = false, optional = true }

[features]
default = ["parallel", "proc", "std"]
extended_tuple = []
parallel = ["rayon", "shipyard_proc/parallel", "hashbrown/rayon"]
proc = ["shipyard_proc"]
serde1 = ["serde", "hashbrown/serde"]
std = ["hashbrown/default-hasher"]
thread_local = []

[dev-dependencies]
bincode = "1.3.3"
parking_lot = "0.12.5"
serde_json = "1.0.148"
serde_derive = { version = "1", features = ["deserialize_in_place"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace.metadata.release]
consolidate-commits = false
pre-release-commit-message = "Bump {{crate_name}} version to {{version}}"
tag-message = "Release {{crate_name}} version {{version}}"
