[package]
name = "bunny_demo"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "bunny_demo"
path = "src/main.rs"

[lib]
name = "bunny_demo_lib"
crate-type = ["cdylib", "rlib"]

[dependencies]
bytemuck = "1.10.0"
egui = "0.19.0"
egui-wgpu = "0.19.0"
egui-winit = { version = "0.19.0", default-features = false }
env_logger = "0.9.0"
glam = "0.21.2"
image = { version = "0.24.2", default-features = false, features = [
    "png",
    "jpeg",
] }
log = "0.4.17"
nanorand = { version = "0.7.0", default-features = false, features = [
    "getrandom",
    "tls",
] }
pollster = "0.2.5"
shipyard = "0.6.1"
wgpu = "0.13.1"
winit = "0.27.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
wgpu = { version = "0.13.1", features = ["webgl"] }
wasm-bindgen = "0.2.81"
wasm-bindgen-futures = "0.4.31"
web-sys = { version = "0.3.58", features = [
    "Document",
    "Window",
    "Element",
    "Performance",
] }
