[package]
name = "shipyard_demo"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = { version = "0.7.3", features = ["wasm-bindgen"] }
nalgebra = "0.19.0"
wasm-bindgen = "0.2.58"
js-sys = "0.3.35"
wasm-bindgen-futures= "0.4.8"
gloo-events = "0.1.1"
awsm_web = { version = "0.0.13", features = ["tick", "webgl", "loaders", "audio"], default-features = false }
wee_alloc = { version = "0.4.5", optional = true }
wasm-logger = { version = "0.2.0", optional = true }
shipyard = { path = "../", features = ["proc", "non_send", "non_sync"], default-features = false }
cfg-if = "0.1.10"
log = "0.4.8"
lazy_static = "1.4.0"


# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }


[dependencies.web-sys]
version = "0.3.35"
features = [
    "console",
    "MouseEvent",
    "Document",
    "Element",
    "HtmlAnchorElement",
    "HtmlElement",
    "HtmlButtonElement",
    "HtmlCanvasElement",
    "CssStyleDeclaration",
    "Node",
    "Window",
    "Performance",

]
[features]
default = ["wee_alloc"]
dev = ["wee_alloc", "wasm-logger", "console_error_panic_hook"]
