[package]
name = "shipyard_proc"
version = "0.2.0"
authors = ["leudz <dylan.ancel@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Crate providing attribute macro to Shipyard"
readme = "CRATES.md"
repository = "https://github.com/leudz/shipyard"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", default-features = false, features = ["derive", "parsing", "printing", "proc-macro"] }
quote = "1"
proc-macro2 = "1"
