[package]
name = "shipyard_proc"
version = "0.2.0"
authors = ["leudz <dylan.ancel@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Crate providing attribute macro to Shipyard"
readme = "CRATES.md"
repository = "https://github.com/leudz/shipyard"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.0"
quote = "1.0.0"
syn = { version = "1.0.0", default-features = false, features = [
    "clone-impls",
    "derive",
    "parsing",
    "printing",
    "proc-macro",
] }
