[package]
name = "shipyard_proc"
version = "0.5.0"
authors = ["leudz <dylan.ancel@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Crate providing attribute macro to Shipyard"
readme = "CRATES.md"
repository = "https://github.com/leudz/shipyard"

[lib]
proc-macro = true

[features]
default = []
parallel = []

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", default-features = false, features = [
    "clone-impls",
    "derive",
    "parsing",
    "printing",
    "proc-macro",
] }
