[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "visualizer"
publish = false
version = "0.0.0"

[[bin]]
name = "visualizer"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.20.1"
egui = "0.20.1"
enum-map = "2.1.0"
serde_json = "1.0.81"
shipyard = { version = "0.6.1", features = ["serde1"] }
syntect = { version = "5.0.0", default-features = false, features = [
    "default-fancy",
] }
tracing = "0.1.34"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4.33"
