[package]
name = "visualizer"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1"
serde_json = "1.0.96"
shipyard = { path = "..", features = ["serde1"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3.61", features = [
    "DataTransfer",
    "DragEvent",
    "Element",
    "FileReader",
    "HtmlDivElement",
    "HtmlSelectElement",
    "Performance",
    "ProgressEvent",
] }
yew = { version = "0.20.0", features = ["csr"] }
